--- a/restaurant-service/src/main/resources/application.properties
+++ b/restaurant-service/src/main/resources/application.properties
@@ -1,10 +1,22 @@
 spring.application.name=RestaurantService
 server.port=8083
-spring.datasource.url=jdbc.h2:mem:orderdb
+# Enable H2 console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+spring.datasource.url=jdbc:h2:mem:restaurantdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
-spring.h2.console.enable=true
+
+#spring.datasource.url=jdbc.h2:mem:orderdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.h2.console.enable=true
 eureka.client.enabled=false
