--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,8 +1,28 @@
 spring.application.name=UserService
 
 server.port=8081
-spring.datasource.url=jdbc:h2:mem:restaurantdb
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.show-sql=true
+# Enable H2 console
 spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+
+#spring.datasource.url=jdbc:h2:mem:userdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=
+#spring.datasource.password=
+#
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.hibernate.show-sql=true
+#spring.h2.console.enabled=true
+
+
 eureka.client.enabled=false
